--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ color:  white;
               <p class="text-center">2019 - 2023</p>
             </div>
             <div class="card-footer">
-              <h4 class="text-center">Persuing</h4>
+              <h4 class="text-center">Pursuing</h4>
 
             </div>
           </div>
