--- a/index.html
+++ b/index.html
@@ -92,23 +92,23 @@ color:  white;
     <div class="row responsive mx-auto">
       <p class=" text-center">Get in touch</p>
       <div class="col text-center">
-        <a href="https://www.linkedin.com/in/kancheti-sri-harshitha-7a05b4224/" class="text-white"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/kancheti-sri-harshitha-7a05b4224/" target="_blank" class="text-white"><i class="bi bi-linkedin"></i></a>
       </div>
 
       <div class="col text-center">
-        <a href="https://www.facebook.com/harshitha.kancheti" class="text-white"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.facebook.com/harshitha.kancheti" target="_blank" class="text-white"><i class="bi bi-facebook"></i></a>
       </div>
 
       <div class="col text-center">
-        <a href="https://wa.me/+916309529822" class="text-white"><i class="bi bi-whatsapp"></i></a>
+        <a href="https://wa.me/+916309529822" target="_blank" class="text-white"><i class="bi bi-whatsapp"></i></a>
       </div>
 
       <div class="col text-center">
-        <a href="https://github.com/harshitha-14" class="text-white"><i class="bi bi-github"></i></a>
+        <a href="https://github.com/harshitha-14" target="_blank" class="text-white"><i class="bi bi-github"></i></a>
       </div>
 
       <div class="col text-center">
-        <a href="https://www.instagram.com/kancheti_harshitha/" class="text-white"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.instagram.com/kancheti_harshitha/" target="_blank" class="text-white"><i class="bi bi-instagram"></i></a>
       </div>
     </div>
 </div>
